--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "sass": "^1.77.6",
-        "typescript-plugin-css-modules": "^5.1.0"
+        "typescript-plugin-css-modules": "^5.1.0",
+        "zustand": "^4.5.4"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
